tests/snapshots/examples_fixtures/type_system__failing__105_unknown_effect_suggestion.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/105_unknown_effect_suggestion.flx
== compile ==
failed (compile)
== diagnostics ==
error[E407]: Unknown Effect

Function effect annotation references unknown effect `I`.

  examples/type_system/failing/105_unknown_effect_suggestion.flx:1:24
  |
1 | fn main() -> Unit with I {
  |                        ^
  |                        - unknown effect in function annotation

Hint:
  did you mean `IO`?
== stdout ==
<not executed>
